--- a/src/partials/fruits.html
+++ b/src/partials/fruits.html
@@ -156,6 +156,7 @@
 
 <script>
   document.querySelector('#order-btn-click').addEventListener('click', () => {
-    document.querySelector('#modal-yourorder').classList.remove('is-closed');
+    document.querySelector('#modal-yourorder').classList.remove('is-hidden');
+    bodyScrollLock.disableBodyScroll(document.body);
   });
 </script>
