--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -80,14 +80,7 @@
               required
             />
           </label>
-          <button
-            type="submit"
-            class="contacts-button"
-            id="contacts-modal-button"
-            onclick="showModal(modalThankYou)"
-          >
-            Send
-          </button>
+          <button type="submit" class="contacts-button" id="contacts-modal-button">Send</button>
         </form>
       </div>
     </div>
